# c-stack-pk

./: .gitignore  CMakeLists.txt  constants.h  main.c
app_interface/: app_interface.c  app_interface.h
entities/student/: student.c  student.h
error-handler/: error_handler.c  error_handler.h
error_handler/: error_handler.c  error_handler.h
lib/root_file_path_constructor/: root_file_path_constructor.c  root_file_path_constructor.h
lib/text_input/: text_input.c  text_input.h
stack/: stack.c  stack.h
